# fantastic-fauns

./: pyproject.toml
src/backend/: main.py
src/backend/app/: api.py
src/frontend/: package-lock.json  package.json  tailwind.config.js
src/frontend-old/: fresh.gen.ts
src/frontend-old/islands/: App.tsx  Canvas.tsx  Chat.tsx  SocketProvider.tsx
src/frontend-old/routes/: index.tsx
src/frontend-old/types/: message.ts  types.ts
src/frontend/src/components/: Canvas.tsx  Chat.tsx  Members.tsx  SocketContext.ts  SocketProvider.tsx  app.tsx
src/frontend/src/routes/home/: index.tsx  style.css
src/frontend/src/style/: index.css
