[tool.poetry]
name = "Fantastic Fauns"
version = "0.1.0"
description = "Project for python discord code jam #9"
authors = [
    "German Alvarez <germanalvarez14@gmail.com",
    "Garrett West <gdubs0896@gmail.com",
    "Austin A <prodbyskynse@gmail.com",
    ]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.*"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
Jinja2 = "^3.1.2"
websockets = "^10.3"
redis = "^4.3.4"

[tool.poetry.dev-dependencies]
# Base tools
flake8 = "~4.0.1"
isort = "~5.10.1"
pre-commit = "~2.17.0"

# Flake8 plugins, see https://github.com/python-discord/code-jam-template/tree/main#plugin-list
flake8-docstrings = "~1.6.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.backend:main"